--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,18 +2,53 @@
   "name": "@zine/mobile",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
-  "main": "./src/index.ts",
+  "main": "expo-router/entry",
   "scripts": {
-    "build": "echo 'Mobile build handled by Expo/EAS'",
-    "dev": "echo 'Run: npx expo start'",
-    "lint": "eslint src --ext .ts,.tsx",
-    "typecheck": "tsc --noEmit"
+    "start": "expo start",
+    "dev": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "eslint app components hooks lib --ext .ts,.tsx",
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@zine/shared": "workspace:*"
+    "@clerk/clerk-expo": "^2.4.0",
+    "@gorhom/bottom-sheet": "^5.1.1",
+    "@zine/shared": "workspace:*",
+    "expo": "~54.0.0",
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.0",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "heroui-native": "1.0.0-beta.8",
+    "react": "18.3.1",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "~5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "replicache": "^15.3.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.3.0",
+    "tailwindcss": "^4.0.0",
+    "uniwind": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "~0.73.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~52.0.3",
     "typescript": "^5.7.2"
   }
 }
