--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,7 +9,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint app components hooks lib --ext .ts,.tsx",
+    "lint": "eslint app lib --ext .ts,.tsx",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -43,10 +43,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/runtime": "^7.28.0",
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-native": "~0.73.0",
+    "babel-jest": "^29.7.0",
+    "babel-preset-expo": "~13.2.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.3",
     "typescript": "^5.7.2"
