--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@zine/shared": "workspace:*",
     "hono": "^4.6.14",
-    "jose": "^5.9.6"
+    "jose": "^5.9.6",
+    "svix": "^1.44.0"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.33",
