--- a/apps/worker/wrangler.toml
+++ b/apps/worker/wrangler.toml
@@ -1,6 +1,12 @@
 name = "zine-worker"
 main = "src/index.ts"
 compatibility_date = "2024-12-01"
+compatibility_flags = ["nodejs_compat"]
+
+# KV namespace for webhook idempotency
+[[kv_namespaces]]
+binding = "WEBHOOK_IDEMPOTENCY"
+id = "REPLACE_WITH_KV_NAMESPACE_ID"
 
 # Durable Object bindings
 [[durable_objects.bindings]]
@@ -15,15 +21,30 @@ new_sqlite_classes = ["UserDO"]
 # Development environment vars
 [vars]
 ENVIRONMENT = "development"
+# CLERK_JWKS_URL = "https://clerk.your-domain.com/.well-known/jwks.json"
+# CLERK_WEBHOOK_SECRET = "whsec_..." # From Clerk Dashboard > Webhooks
 
 # Staging environment
 [env.staging]
 name = "zine-worker-staging"
 [env.staging.vars]
 ENVIRONMENT = "staging"
+# Set via wrangler secret: CLERK_WEBHOOK_SECRET
 
 # Production environment
 [env.production]
 name = "zine-worker-production"
 [env.production.vars]
 ENVIRONMENT = "production"
+# Set via wrangler secret: CLERK_WEBHOOK_SECRET
+
+# ============================================================================
+# Required Secrets (set via `wrangler secret put <NAME>`)
+# ============================================================================
+# - CLERK_WEBHOOK_SECRET: Signing secret from Clerk Dashboard > Webhooks
+#
+# Required KV Namespace (create via `wrangler kv:namespace create WEBHOOK_IDEMPOTENCY`)
+# - WEBHOOK_IDEMPOTENCY: KV for webhook idempotency tracking
+#
+# Optional Variables:
+# - CLERK_JWKS_URL: Override default JWKS URL for token verification
