--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -2,13 +2,13 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "types": ["@cloudflare/workers-types", "vitest/globals"],
+    "types": ["@cloudflare/workers-types", "@cloudflare/vitest-pool-workers", "vitest/globals"],
     "paths": {
       "@zine/shared": ["../../packages/shared/src"],
       "@zine/shared/*": ["../../packages/shared/src/*"],
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "vitest.config.ts", "**/*.test.ts"],
+  "include": ["src/**/*.ts", "vitest.config.ts", "**/*.test.ts", "worker-configuration.d.ts"],
   "exclude": ["node_modules", "dist", ".wrangler"]
 }
