--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -16,10 +16,15 @@
     "deploy:production": "wrangler deploy --env production"
   },
   "dependencies": {
+    "@hono/trpc-server": "^0.3.2",
+    "@trpc/server": "^11.0.0-rc.709",
     "@zine/shared": "workspace:*",
+    "drizzle-orm": "^0.38.3",
     "hono": "^4.6.14",
     "jose": "^5.9.6",
-    "svix": "^1.44.0"
+    "superjson": "^2.2.2",
+    "svix": "^1.44.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.33",
