--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "type": "module",
   "main": "./src/index.ts",
+  "exports": {
+    "./trpc": {
+      "types": "./src/trpc/router.ts"
+    }
+  },
   "scripts": {
     "build": "echo 'Worker build handled by Wrangler'",
     "dev": "wrangler dev",
