Refactor mobile app to tRPC architecture and remove Replicache/Clerk dependencies
- Replace Replicache sync with tRPC client for data fetching
- Remove Clerk auth in favor of simpler token-based auth
- Add new theme system with design tokens (Colors, Typography, Spacing)
- Implement new UI components (HapticTab, ThemedText, etc.)
- Add tRPC provider and item hooks for data management
- Update tab navigation with inline SVG icons
- Implement styled Inbox, Home, and Library screens
- Remove Durable Objects from worker, add D1 migrations
- Add pagination utilities and update auth middleware
- Clean up shared package, remove sync-related types

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -2,24 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": ".",
     "paths": {
-      "@zine/shared": ["../../packages/shared/src"],
-      "@zine/shared/*": ["../../packages/shared/src/*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@zine/worker/*": ["../worker/src/*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "uniwind-types.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    ".expo",
-    "coverage"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
