--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,57 +1,61 @@
 {
   "name": "@zine/mobile",
-  "version": "0.0.1",
-  "private": true,
   "main": "expo-router/entry",
+  "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "dev": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "lint": "eslint app lib --ext .ts,.tsx",
-    "typecheck": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "dev": "expo start -c",
+    "start": "expo start -c",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android -c",
+    "ios": "expo start --ios -c",
+    "web": "expo start --web -c",
+    "lint": "expo lint"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.4.0",
-    "@gorhom/bottom-sheet": "^5.1.1",
+    "@expo/vector-icons": "^15.0.3",
     "@zine/shared": "workspace:*",
-    "expo": "~54.0.0",
-    "expo-constants": "~17.0.8",
-    "expo-font": "~13.3.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.0",
-    "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.8",
-    "expo-status-bar": "~2.2.3",
-    "heroui-native": "1.0.0-beta.8",
-    "react": "18.3.1",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-heroicons": "^4.0.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "~5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
-    "replicache": "^15.3.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^0.3.0",
-    "tailwindcss": "^4.0.0",
-    "uniwind": "^1.0.0"
+    "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.8",
+    "expo": "~54.0.29",
+    "expo-constants": "~18.0.12",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linear-gradient": "^15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-router": "~6.0.19",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
+    "heroui-native": "^1.0.0-beta.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "@tanstack/react-query": "^5.60.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "superjson": "^2.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
+    "tailwindcss": "^4.1.17",
+    "uniwind": "^1.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/runtime": "^7.28.0",
-    "@testing-library/react-native": "^12.9.0",
-    "@types/jest": "^29.5.14",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "~0.73.0",
-    "babel-jest": "^29.7.0",
-    "babel-preset-expo": "~13.2.0",
-    "jest": "^29.7.0",
-    "jest-expo": "~52.0.3",
-    "typescript": "^5.7.2"
-  }
+    "@types/react": "~19.1.0",
+    "typescript": "~5.9.2",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~10.0.0"
+  },
+  "private": true
 }
