--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -18,11 +18,15 @@
     "test:run": "vitest run",
     "deploy": "wrangler deploy",
     "deploy:staging": "wrangler deploy --env staging",
-    "deploy:production": "wrangler deploy --env production"
+    "deploy:production": "wrangler deploy --env production",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@hono/trpc-server": "^0.3.2",
-    "@trpc/server": "^11.0.0-rc.709",
+    "@trpc/server": "^11.0.0",
     "@zine/shared": "workspace:*",
     "drizzle-orm": "^0.38.3",
     "hono": "^4.6.14",
@@ -34,6 +38,8 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.33",
     "@cloudflare/workers-types": "^4.20241205.0",
+    "@types/node": "^22.10.2",
+    "drizzle-kit": "^0.28.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8",
     "wrangler": "^3.95.0"
