--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,12 +12,16 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.19.11",
     "@expo/vector-icons": "^15.0.3",
-    "@zine/shared": "workspace:*",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.60.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@zine/shared": "workspace:*",
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
@@ -26,6 +30,7 @@
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.19",
+    "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
@@ -42,9 +47,6 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "@tanstack/react-query": "^5.60.0",
-    "@trpc/client": "^11.0.0",
-    "@trpc/react-query": "^11.0.0",
     "superjson": "^2.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
