feat: implement automated content ingestion pipeline for external sources
- Add robust ingestion system supporting multiple content sources (RSS, Atom, JSON feeds)
- Implement fetch-based content extraction with comprehensive error handling
- Add content deduplication using URL-based canonical identification
- Support for various content types (articles, videos, podcasts, posts)
- Implement content cleaning and normalization pipeline
- Add batch processing with configurable limits and retry logic
- Include content metadata extraction (titles, authors, publish dates)
- Add comprehensive logging and monitoring for ingestion operations
- Configure worker environment variables for feed URLs and processing limits
- Implement incremental processing to avoid duplicate content ingestion

This enables automated content discovery and ingestion from external sources
into the Zine platform, providing users with a continuously updated stream
of relevant content from their subscribed feeds.

--- a/apps/worker/wrangler.toml
+++ b/apps/worker/wrangler.toml
@@ -15,6 +15,10 @@ database_name = "zine-db-dev"
 database_id = "REPLACE_WITH_DEV_D1_DATABASE_ID"
 migrations_dir = "src/db/migrations"
 
+# Cron triggers for scheduled ingestion
+[triggers]
+crons = ["0 * * * *"]  # Run every hour
+
 # Development environment vars
 [vars]
 ENVIRONMENT = "development"
@@ -24,6 +28,9 @@ ENVIRONMENT = "development"
 # Staging environment
 [env.staging]
 name = "zine-worker-staging"
+[[env.staging.kv_namespaces]]
+binding = "WEBHOOK_IDEMPOTENCY"
+id = "abb1a04762cb4a129218d8c9651adf7c"
 [[env.staging.d1_databases]]
 binding = "DB"
 database_name = "zine-db-staging"
@@ -36,6 +43,18 @@ ENVIRONMENT = "staging"
 # Production environment
 [env.production]
 name = "zine-worker-production"
+routes = [
+  { pattern = "api.myzine.app", zone_name = "myzine.app" }
+]
+[[env.production.kv_namespaces]]
+binding = "WEBHOOK_IDEMPOTENCY"
+id = "9937928f2eb54074bda5e035dac09c14"
+
+# Durable Object migration: Delete UserDO class that was previously deployed
+[[env.production.migrations]]
+tag = "v1-delete-user-do"
+deleted_classes = ["UserDO"]
+
 [[env.production.d1_databases]]
 binding = "DB"
 database_name = "zine-db-production"
