feat: implement provider connections and subscriptions system
Add OAuth provider connection flow (YouTube, Spotify) with PKCE security:
- OAuth flow with secure token storage and PKCE challenge/verifier
- Provider connections tRPC router with connect/disconnect/status
- Subscriptions tRPC router for managing channel subscriptions
- Adaptive polling scheduler for efficient content fetching
- Ingestion pipeline with idempotent item processing

Mobile app updates:
- Settings screen with connection management
- Subscriptions management screens (connect, discover, list)
- Onboarding flow for new users
- OAuth callback handling and error boundaries
- Sync status indicators and offline support hooks

Database schema:
- provider_connections table for encrypted OAuth tokens
- subscriptions table for user channel subscriptions
- subscription_items table for tracking ingested content
- Migration files for all new tables

Documentation:
- Provider connections architecture
- Updated tech stack and experience docs

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -15,3 +15,17 @@ EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxxxx
 # Development: Leave unset (uses localhost:8787 / 10.0.2.2:8787 for Android)
 # Production: Set to your production API URL
 # EXPO_PUBLIC_API_URL=https://api.myzine.app
+
+# =============================================================================
+# OAuth Provider Client IDs
+# =============================================================================
+# These must match the client IDs in apps/worker/.dev.vars
+# Get these from the respective developer dashboards:
+# - Spotify: https://developer.spotify.com/dashboard
+# - YouTube: https://console.cloud.google.com/apis/credentials
+
+# Spotify OAuth Client ID
+EXPO_PUBLIC_SPOTIFY_CLIENT_ID=your_spotify_client_id
+
+# YouTube/Google OAuth Client ID
+# EXPO_PUBLIC_YOUTUBE_CLIENT_ID=your_google_client_id
