--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -23,12 +23,14 @@
     "@trpc/react-query": "^11.0.0",
     "@zine/shared": "workspace:*",
     "expo": "~54.0.29",
+    "expo-auth-session": "^7.0.10",
     "expo-constants": "~18.0.12",
+    "expo-crypto": "^15.0.8",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
-    "expo-linking": "~8.0.10",
+    "expo-linking": "^8.0.11",
     "expo-router": "~6.0.19",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.12",
