--- a/apps/worker/wrangler.toml
+++ b/apps/worker/wrangler.toml
@@ -8,6 +8,11 @@ compatibility_flags = ["nodejs_compat"]
 binding = "WEBHOOK_IDEMPOTENCY"
 id = "REPLACE_WITH_KV_NAMESPACE_ID"
 
+# KV namespace for OAuth state (CSRF protection)
+[[kv_namespaces]]
+binding = "OAUTH_STATE_KV"
+id = "REPLACE_WITH_OAUTH_STATE_KV_ID"
+
 # D1 Database binding (development)
 [[d1_databases]]
 binding = "DB"
