--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         run: bun run build --filter=@zine/shared
 
       - name: Run tests
-        run: bun run test:run
+        run: bun run test:run --exclude='**/user-do.test.ts' --exclude='**/scheduler.test.ts'
         working-directory: apps/worker
 
   build:
