--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -26,13 +26,16 @@
   },
   "dependencies": {
     "@hono/trpc-server": "^0.3.2",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "@trpc/server": "^11.0.0",
     "@zine/shared": "workspace:*",
     "drizzle-orm": "^0.38.3",
+    "googleapis": "^169.0.0",
     "hono": "^4.6.14",
     "jose": "^5.9.6",
     "superjson": "^2.2.2",
     "svix": "^1.44.0",
+    "ulid": "^3.0.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
