--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -56,10 +56,12 @@
     "uniwind": "^1.2.2"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
