feat: production deploy configuration
- Add iOS bundle identifier and EAS project config
- Add .env.preview and .env.production to gitignore
- Add build output and credentials directories to gitignore
- Add .easignore files to exclude .beads from EAS builds
- Add preview build script with dotenv support
- Update EAS production profile with internal distribution
- Add new dependencies: async-storage, netinfo, ulid, dotenv-cli
- Update expo and related packages

--- a/apps/mobile/.gitignore
+++ b/apps/mobile/.gitignore
@@ -32,6 +32,16 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env.production
+.env.preview
+
+# build output
+/build
+
+# local credentials
+credentials.json
+/certs
+/credentials
 
 # typescript
 *.tsbuildinfo
