--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -1,13 +1,15 @@
 # Zine Mobile App Environment Variables
-# Copy this to .env.local and fill in your values
+#
+# For development: Copy to .env.local and fill in your values
+# For production builds: Copy to .env.production with production values
 
 # =============================================================================
 # Clerk Authentication
 # =============================================================================
 # Get this from Clerk Dashboard > API Keys > Publishable Key
 # Use your DEVELOPMENT key for .env.local
-# Use your PRODUCTION key for production builds
-EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxxxx
+# Use your PRODUCTION key for .env.production
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live
 
 # =============================================================================
 # API Configuration
