--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,12 +9,15 @@
     "android": "expo start --android -c",
     "ios": "expo start --ios -c",
     "web": "expo start --web -c",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:ios:preview": "dotenv -e .env.preview -- eas build --platform ios --profile preview --local --output ./build/preview.ipa --non-interactive"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.19.11",
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -22,7 +25,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@zine/shared": "workspace:*",
-    "expo": "~54.0.29",
+    "expo": "~54.0.30",
     "expo-auth-session": "^7.0.10",
     "expo-constants": "~18.0.12",
     "expo-crypto": "^15.0.8",
@@ -31,9 +34,9 @@
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "^8.0.11",
-    "expo-router": "~6.0.19",
+    "expo-router": "~6.0.21",
     "expo-secure-store": "^15.0.8",
-    "expo-splash-screen": "~31.0.12",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
@@ -53,11 +56,14 @@
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.17",
+    "ulid": "^3.0.2",
     "uniwind": "^1.2.2"
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "~19.1.0",
+    "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "react-test-renderer": "19.0.0",
