fix: configure Google OAuth with iOS reversed client ID scheme
- Add CFBundleURLTypes to app.json for Google OAuth callback on iOS
- Update getRedirectUri() to always use reversed client ID for YouTube/Google
- Add OAuth state KV bindings for staging/production environments
- Configure real KV and D1 database IDs in wrangler.toml
- Set EXPO_HOSTNAME and worker --ip 0.0.0.0 for local network dev

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -12,7 +12,14 @@
       "supportsTablet": true,
       "bundleIdentifier": "app.zine.mobile",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": [
+              "com.googleusercontent.apps.973421703522-43taa7aemrl1l5kjo6bp5pddj0e58tsd"
+            ]
+          }
+        ]
       }
     },
     "android": {
