--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build": "echo 'Worker build handled by Wrangler'",
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --ip 0.0.0.0",
     "lint": "eslint src --ext .ts",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
