feat: complete Tech Debt Epic (#14) - comprehensive cleanup and refactoring
## Summary
Completed all 32 tasks across 5 priority levels for the Tech Debt Epic.

## P0: Security-Critical Tests (5 tasks)
- Mobile OAuth PKCE flow tests (45 tests)
- Mobile auth module tests (20 tests)
- Worker distributed locking tests (36 tests)
- Worker auth module tests (25 tests)
- Worker token refresh tests (40 tests)

## P1: Critical Refactoring (6 tasks)
- Extract icon components from home screen
- Extract card components (55% line reduction)
- Create shared ChannelSelectionList component (62% reduction)
- Split polling scheduler by provider into youtube-poller.ts and spotify-poller.ts
- Replace mock data with real tRPC queries
- Replace hardcoded stats with dynamic counts

## P2: Code Consolidation (8 tasks)
- Consolidate schema definitions to @zine/shared
- Move YouTube Shorts threshold to shared constants
- Extract Spotify date parsing utility
- Create unified error classification utilities
- Extract item transformation helper
- Create optimistic update factory (173 lines removed)
- Remove unimplemented PAUSE/RESUME_SUBSCRIPTION
- Document timestamp format standard

## P3: Dead Code Removal (3 tasks)
- Delete Expo template files (381 lines)
- Delete worker stub files (263 lines)
- Clean up unused @zine/shared exports

## P4: Test Coverage (4 tasks)
- Spotify provider API client tests (48 tests)
- YouTube provider API client tests (61 tests)
- Offline mutation hook tests (38 tests)
- Documentation gaps addressed

## Metrics
- Total lines removed: ~2000+
- Total tests added: 300+
- Files deleted: 10
- Home screen reduced from 1041 to 440 lines

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "EXPO_HOSTNAME=100.92.242.50 expo start -c",
     "start": "expo start -c",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android -c",
     "ios": "expo start --ios -c",
     "web": "expo start --web -c",
     "lint": "expo lint",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "build:ios:preview": "dotenv -e .env.preview -- eas build --platform ios --profile preview --local --output ./build/preview.ipa --non-interactive"
   },
   "dependencies": {
@@ -61,12 +62,16 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "react-test-renderer": "19.0.0",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
   "private": true
