feat: add per-branch dev environment isolation for parallel worktree development
Implement worktree-aware development environment that enables running
independent dev environments across multiple git worktrees with:

- Deterministic port assignment (8700-8799) based on worktree path hash
- Automatic database seeding from main worktree (OAuth tokens, test data)
- Worker secrets (.dev.vars) symlinked from main worktree
- Dynamic mobile .env.local generation with correct backend port
- Dynamic CORS to allow any localhost port in development
- Android emulator support with automatic localhost→10.0.2.2 substitution
- Port conflict detection with manual override option

New scripts:
- dev:worktree - Main orchestration script for isolated dev environment
- dev:reset - Reset worktree state for fresh re-seed from main

Closes #24

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "dev": "EXPO_HOSTNAME=100.92.242.50 expo start -c",
+    "dev": "EXPO_HOSTNAME=100.92.242.50 expo start -c --port ${METRO_PORT:-8081}",
     "start": "expo start -c",
     "android": "expo start --android -c",
     "ios": "expo start --ios -c",
