--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@hono/trpc-server": "^0.3.2",
+    "@mozilla/readability": "^0.6.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@trpc/server": "^11.0.0",
     "@zine/shared": "workspace:*",
@@ -33,6 +34,7 @@
     "googleapis": "^169.0.0",
     "hono": "^4.6.14",
     "jose": "^5.9.6",
+    "linkedom": "^0.18.12",
     "superjson": "^2.2.2",
     "svix": "^1.44.0",
     "ulid": "^3.0.2",
