--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -23,7 +23,9 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/query-async-storage-persister": "^5.60.0",
     "@tanstack/react-query": "^5.60.0",
+    "@tanstack/react-query-persist-client": "^5.60.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@zine/shared": "workspace:*",
