--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -30,6 +30,14 @@ jobs:
       - name: Build shared package
         run: bun run build --filter=@zine/shared
 
+      - name: Run database migrations
+        run: bun run db:migrate
+        working-directory: apps/worker
+        env:
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          D1_DATABASE_ID: ${{ secrets.D1_DATABASE_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
       - name: Deploy to Cloudflare
         run: bun run deploy:production
         working-directory: apps/worker
