--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -40,6 +40,21 @@
       "expo-router",
       "expo-secure-store",
       [
+        "expo-share-extension",
+        {
+          "activationRules": [
+            {
+              "type": "url",
+              "max": 1
+            },
+            {
+              "type": "text",
+              "max": 1
+            }
+          ]
+        }
+      ],
+      [
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
