chore: align tech debt audit changes

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -19,6 +19,15 @@ EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live
 # EXPO_PUBLIC_API_URL=https://api.myzine.app
 
 # =============================================================================
+# Error Tracking (Sentry-compatible)
+# =============================================================================
+# Sentry DSN (public key) from your Sentry/GlitchTip project settings
+# EXPO_PUBLIC_SENTRY_DSN=https://public_key@o123456.ingest.sentry.io/1234567
+# Optional environment and release labels
+# EXPO_PUBLIC_SENTRY_ENVIRONMENT=production
+# EXPO_PUBLIC_SENTRY_RELEASE=mobile@1.0.0
+
+# =============================================================================
 # OAuth Provider Client IDs
 # =============================================================================
 # These must match the client IDs in apps/worker/.dev.vars
