Add root test script and refresh AGENTS guide

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "dev": "turbo run dev",
     "dev:worktree": "./scripts/dev.sh",
     "dev:reset": "./scripts/dev-reset.sh",
+    "test": "bun run test:mobile && bun run test:worker",
+    "test:mobile": "bun run --cwd apps/mobile test",
+    "test:worker": "bun run --cwd apps/worker test:run",
+    "test:worker:ci": "bun run --cwd apps/worker test:run --exclude='**/user-do.test.ts' --exclude='**/scheduler.test.ts'",
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
