--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -31,6 +31,7 @@
     "@trpc/server": "^11.0.0",
     "@zine/shared": "workspace:*",
     "drizzle-orm": "^0.38.3",
+    "fast-xml-parser": "^5.3.6",
     "googleapis": "^169.0.0",
     "hono": "^4.6.14",
     "jose": "^5.9.6",
