--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -29,16 +29,16 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@zine/shared": "workspace:*",
-    "expo": "~54.0.30",
+    "expo": "~54.0.33",
     "expo-auth-session": "^7.0.10",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-crypto": "^15.0.8",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "^8.0.11",
-    "expo-router": "~6.0.21",
+    "expo-router": "~6.0.23",
     "expo-share-extension": "^5.0.5",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.13",
@@ -68,14 +68,14 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "~29.5.14",
     "@types/react": "~19.1.0",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
+    "jest": "~29.7.0",
+    "jest-environment-jsdom": "~29.7.0",
     "react-test-renderer": "19.0.0",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
