--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,6 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "EXPO_HOSTNAME=100.92.242.50 expo start -c --port ${METRO_PORT:-8081}",
+    "storybook": "EXPO_PUBLIC_STORYBOOK_ENABLED=true EXPO_HOSTNAME=100.92.242.50 expo start -c --port ${METRO_PORT:-8081}",
+    "storybook:generate": "sb-rn-get-stories",
     "start": "expo start -c",
     "android": "expo start --android -c",
     "ios": "expo start --ios -c",
@@ -67,6 +69,11 @@
     "lucide-react-native": "^0.474.0"
   },
   "devDependencies": {
+    "@storybook/addon-ondevice-actions": "^10.2.3",
+    "@storybook/addon-ondevice-backgrounds": "^10.2.3",
+    "@storybook/addon-ondevice-controls": "^10.2.3",
+    "@storybook/addon-ondevice-notes": "^10.2.3",
+    "@storybook/react-native": "^10.2.3",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "~29.5.14",
     "@types/react": "~19.1.0",
@@ -77,6 +84,7 @@
     "jest": "~29.7.0",
     "jest-environment-jsdom": "~29.7.0",
     "react-test-renderer": "19.0.0",
+    "storybook": "^10.2.10",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
