--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "echo 'Worker build handled by Wrangler'",
     "dev": "wrangler dev --ip 0.0.0.0 --port ${WORKER_PORT:-8787}",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src --ext .ts --cache --cache-location .eslintcache",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:run": "vitest run",
