--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -21,7 +21,9 @@
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.6.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/slider": "5.1.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -31,42 +33,42 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@zine/shared": "workspace:*",
-    "expo": "~54.0.33",
-    "expo-auth-session": "^7.0.10",
-    "expo-constants": "~18.0.13",
-    "expo-crypto": "^15.0.8",
-    "expo-font": "~14.0.11",
-    "expo-haptics": "~15.0.8",
-    "expo-image": "~3.0.11",
-    "expo-linear-gradient": "^15.0.8",
-    "expo-linking": "^8.0.11",
-    "expo-router": "~6.0.23",
+    "expo": "^55",
+    "expo-auth-session": "~55.0.6",
+    "expo-constants": "~55.0.7",
+    "expo-crypto": "~55.0.8",
+    "expo-font": "~55.0.4",
+    "expo-haptics": "~55.0.8",
+    "expo-image": "~55.0.5",
+    "expo-linear-gradient": "~55.0.8",
+    "expo-linking": "~55.0.7",
+    "expo-router": "~55.0.3",
+    "expo-secure-store": "~55.0.8",
     "expo-share-extension": "^5.0.5",
-    "expo-secure-store": "^15.0.8",
-    "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.9",
-    "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
-    "expo-web-browser": "~15.0.10",
+    "expo-splash-screen": "~55.0.10",
+    "expo-status-bar": "~55.0.4",
+    "expo-symbols": "~55.0.4",
+    "expo-system-ui": "~55.0.9",
+    "expo-web-browser": "~55.0.9",
     "heroui-native": "^1.0.0-beta.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "lucide-react-native": "^0.474.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-native": "0.83.2",
     "react-native-context-menu-view": "^1.21.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-gesture-handler": "~2.30.0",
+    "react-native-reanimated": "4.2.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-screens": "~4.23.0",
+    "react-native-svg": "15.15.3",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "0.7.2",
     "superjson": "^2.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.17",
     "ulid": "^3.0.2",
-    "uniwind": "^1.2.2",
-    "lucide-react-native": "^0.474.0"
+    "uniwind": "^1.2.2"
   },
   "devDependencies": {
     "@storybook/addon-ondevice-actions": "^10.2.3",
@@ -76,11 +78,11 @@
     "@storybook/react-native": "^10.2.3",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "~29.5.14",
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.2.10",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
+    "eslint-config-expo": "~55.0.0",
     "jest": "~29.7.0",
     "jest-environment-jsdom": "~29.7.0",
     "react-test-renderer": "19.0.0",
